# flacterm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  build_release.py  config.py  dab.py  install.sh  main.py  pyproject.toml  release.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  todo.txt
.github/workflows/: release.yml  test.yml
components/: audio_player.py  keybinds_display.py  lyrics_display.py  playlist_display.py  playlist_manager.py  playlist_selector.py  queue_display.py  queue_manager.py  results.py
flacterm/: __init__.py  main.py
flacterm/components/: audio_player.py  keybinds_display.py  lyrics_display.py  playlist_manager.py  queue_display.py  queue_manager.py  results.py
flacterm/utils/: api.py
playlists/: myplaylist.json
utils/: api.py
