[metadata]
name = flacterm
version = 1.0.0
author = BRArjun
description = Stream FLAC music from the comfort of your Linux terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BRArjun/flacterm
project_urls =
    Bug Tracker = https://github.com/BRArjun/flacterm/issues
    Documentation = https://github.com/BRArjun/flacterm#readme
    Source Code = https://github.com/BRArjun/flacterm
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Terminals
keywords = music, flac, terminal, tui, streaming, audio, player

[options]
packages = find:
python_requires = >=3.8
install_requires =
    textual
    rich
    requests
    python-vlc
    lrclibapi
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    YourDownloads*
    playlists*

[options.entry_points]
console_scripts =
    flacterm = flacterm.main:main

[options.package_data]
flacterm = *.txt, *.md, *.json

[options.exclude_package_data]
* = *.pyc, __pycache__/*, *.pyo, *.pyd, .git/*, .pytest_cache/*

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[egg_info]
tag_build =
tag_date = 0
